--- a/analysis.Rmd
+++ b/analysis.Rmd
@@ -15,8 +15,9 @@ The goal of this project is to analyze how severe weather events affect public h
 
 We have found out that tornadoes are significantly more harmful to population health than any other type of events; floods, lightnings, excessive heat and thunderstorm winds cause many injuries and fatalities as well.
 
-Floods, hurricane typhoons, tornadoes, and storm surges cause most property damage (40-140 $ billions). And the most harmful for crops are drought, floods, and ice storms. 
-Summing up, tornadoes and floods cause dramatically huge public health and economic problems for communities and municipalities, and preventing such outcomes to the extent possible is a key concern.
+Floods, hurricanes/typhoons, and tornadoes cause most property damage (40-140 $ billions). And the most harmful for crops are drought, floods, and hurricanes/typhoons.
+
+Summing up, typhoons, tornadoes, and floods cause huge both public health and economic problems for communities and municipalities, and preventing such outcomes to the extent possible is a key concern.
 
 ## Data
 
@@ -38,16 +39,16 @@ The events in the database start in the year 1950 and end in November 2011. In t
 ## Setting up
 
 ```{r, results='hide'}
-echo = TRUE # to ensure that all code will be shown
-
-options(scipen = 1)
-
 library(dplyr)
 library(tidyr)
 library(ggplot2)
 library(data.table)
 library(R.utils)
 library(knitr)
+
+echo = TRUE # to ensure that all code will be shown
+
+options(scipen = 1)
 ```
 
 ## Import the data
@@ -120,7 +121,9 @@ CROPDMGEXP | chr | Crops damage multiplier
 Create a new dataset from these columns:
 
 ```{r, cache=TRUE}
-columns <- c("BGN_DATE", "STATE", "EVTYPE", "FATALITIES", "INJURIES", "PROPDMG", "CROPDMG", "PROPDMGEXP", "CROPDMGEXP")
+columns <- c("BGN_DATE", "STATE", "EVTYPE", 
+             "FATALITIES", "INJURIES", "PROPDMG", 
+             "CROPDMG", "PROPDMGEXP", "CROPDMGEXP")
 storm <- select(tbl_df(raw.storm), one_of(columns))
 
 colnames(storm) <- tolower(colnames(storm))
@@ -148,6 +151,7 @@ storm$bgn_date <- as.Date(storm$bgn_date, format = "%m/%d/%Y %H:%M:%S")
 
 # subset only new data
 storm <- subset(storm, bgn_date > as.Date("1996-01-01"))
+nrow(storm)
 ```
 
 ### Damage cost multipliers
@@ -187,12 +191,13 @@ storm$propdmg[is.na(storm$propdmg)] <- 0
 storm$cropdmg[is.na(storm$cropdmg)] <- 0
 
 storm <- storm %>% subset(fatalities!=0 | injuries!=0 | propdmg!=0 | cropdmg!=0)
+nrow(storm) # down to 201313 observations
 ```
 
 ### Tidying event types
 
 The last thing is to tidy up the `evtype` column.  Let's save it to a separate variable and then have a look at it:
-```{r, cache=TRUE}
+```{r}
 events <- storm$evtype
 head(data.frame(table(events)), n=20)
 ```
@@ -220,90 +225,45 @@ events <- gsub("[[:punct:]]+", " ", events)
 events <- gsub("^\\s+|\\s+$|\\s\\s+", "", events)
 ```
 
+Next, we will replace incorrect values with correct ones (from the NOAA paper) with help of code you can see in Appendix (~300 lines).
 ```{r echo=F}
 events[events=="TSTM WIND" | events=="THUNDERSTORM" |
       events=="THUNDERSTORM WINDG" | events=="THUNDERSTORMS"] <- "THUNDERSTORM WIND"
+
 events[events=="MARINE TSTM WIND"] <- "MARINE THUNDERSTORM WIND"
-events[events=="ASTRONOMICAL LOW TIDE"] <- "ASTRONOMICAL LOW TIDE"
-events[events=="AVALANCHE"] <- "AVALANCHE"
-events[events=="BLIZZARD"] <- "BLIZZARD"
-events[events=="COASTAL EROSION"] <- "COASTAL FLOOD"
-events[events=="COASTAL FLOOD"] <- "COASTAL FLOOD"
-events[events=="COASTAL FLOODING EROSION"] <- "COASTAL FLOOD"
-events[events=="COASTAL FLOODING"] <- "COASTAL FLOOD"
-events[events=="COASTAL STORM"] <- "COASTAL FLOOD"
-events[events=="COASTALFLOODING EROSION"] <- "COASTAL FLOOD"
-events[events=="COASTALSTORM"] <- "COASTAL FLOOD"
-events[events=="COLD TEMPERATURE"] <- "COLD/WIND CHILL"
-events[events=="COLD WEATHER"] <- "COLD/WIND CHILL"
-events[events=="COLD WIND CHILL"] <- "COLD/WIND CHILL"
-events[events=="COLD"] <- "COLD/WIND CHILL"
+
+events[events=="COASTAL EROSION" | events=="COASTAL FLOODING EROSION" | events=="COASTAL FLOODING" | events=="COASTAL STORM" | events=="COASTALFLOODING EROSION" | events=="COASTALSTORM"] <- "COASTAL FLOOD"
+events[events=="COLD TEMPERATURE" | events=="COLD WEATHER" | events=="COLD WIND CHILL" | events=="COLD"] <- "COLD/WIND CHILL"
 events[events=="DAMAGING FREEZE"] <- "FROST/FREEZE"
-events[events=="DENSE FOG"] <- "DENSE FOG"
-events[events=="DOWNBURST"] <- "STRONG WIND"
-events[events=="DROUGHT"] <- "DROUGHT"
-events[events=="DRY MICROBURST"] <- "STRONG WIND"
-events[events=="DUST DEVIL"] <- "DUST DEVIL"
-events[events=="DUST STORM"] <- "DUST STORM"
+events[events=="DOWNBURST" | events=="DRY MICROBURST"] <- "STRONG WIND"
 events[events=="EROSION CSTL FLOOD"] <- "COASTAL FLOOD"
-events[events=="EXCESSIVE HEAT"] <- "EXCESSIVE HEAT"
-events[events=="EXTREME COLD WIND CHILL"] <- "EXTREME COLD/WIND CHILL"
-events[events=="EXTREME COLD"] <- "EXTREME COLD/WIND CHILL"
-events[events=="EXTREME WINDCHILL"] <- "EXTREME COLD/WIND CHILL"
-events[events=="FLASH FLOOD FLOOD"] <- "FLOOD/FLASH FLOOD"
-events[events=="FLASH FLOOD"] <- "FLOOD/FLASH FLOOD"
-events[events=="FLOOD FLASH FLOOD"] <- "FLOOD/FLASH FLOOD"
-events[events=="FLOOD"] <- "FLOOD/FLASH FLOOD"
-events[events=="FREEZING FOG"] <- "FREEZING FOG"
+events[events=="EXTREME COLD WIND CHILL" | events=="EXTREME COLD" | events=="EXTREME WINDCHILL"] <- "EXTREME COLD/WIND CHILL"
+events[events=="FLASH FLOOD FLOOD" | events=="FLASH FLOOD" | events=="FLOOD FLASH FLOOD" | events=="FLOOD"] <- "FLOOD/FLASH FLOOD"
 events[events=="FROST FREEZE"] <- "FROST/FREEZE"
 events[events=="FROST"] <- "FROST/FREEZE"
-events[events=="FUNNEL CLOUD"] <- "FUNNEL CLOUD"
-events[events=="HAIL"] <- "HAIL"
-events[events=="HEAT"] <- "HEAT"
 events[events=="HEAVY RAIN HIGH SURF"] <- "HEAVY RAIN"
-events[events=="HEAVY RAIN"] <- "HEAVY RAIN"
 events[events=="HEAVY SNOW SHOWER"] <- "HEAVY SNOW"
-events[events=="HEAVY SNOW"] <- "HEAVY SNOW"
 events[events=="HEAVY SURF AND WIND"] <- "HIGH SURF"
 events[events=="HEAVY SURF HIGH SURF"] <- "HIGH SURF"
 events[events=="HEAVY SURF"] <- "HIGH SURF"
 events[events=="HIGH SURF ADVISORY"] <- "HIGH SURF"
-events[events=="HIGH SURF"] <- "HIGH SURF"
-events[events=="HIGH WIND"] <- "HIGH WIND"
 events[events=="HIGH WINDG"] <- "HIGH WIND"
 events[events=="HIGH WINDS"] <- "HIGH WIND"
 events[events=="HURRICANE EDOUARD"] <- "HURRICANE/TYPHOON"
 events[events=="HURRICANE TYPHOON"] <- "HURRICANE/TYPHOON"
 events[events=="HURRICANE"] <- "HURRICANE/TYPHOON"
 events[events=="ICE STORM"] <- "ICE STORM"
-events[events=="LIGHTNING"] <- "LIGHTNING"
-events[events=="MARINE HAIL"] <- "MARINE HAIL"
-events[events=="MARINE HIGH WIND"] <- "MARINE HIGH WIND"
-events[events=="MARINE STRONG WIND"] <- "MARINE STRONG WIND"
-events[events=="MARINE THUNDERSTORM WIND"] <- "MARINE THUNDERSTORM WIND"
-events[events=="RIP CURRENT"] <- "RIP CURRENT"
 events[events=="RIP CURRENTS"] <- "RIP CURRENT"
-events[events=="SEICHE"] <- "SEICHE"
 events[events=="SMALL HAIL"] <- "HAIL"
-events[events=="STRONG WIND"] <- "STRONG WIND"
 events[events=="STRONG WINDS"] <- "STRONG WIND"
-events[events=="THUNDERSTORM WIND"] <- "THUNDERSTORM WIND"
-events[events=="TORNADO"] <- "TORNADO"
-events[events=="TROPICAL DEPRESSION"] <- "TROPICAL DEPRESSION"
-events[events=="TROPICAL STORM"] <- "TROPICAL STORM"
 events[events=="TSTM WIND AND LIGHTNING"] <- "THUNDERSTORM WIND"
 events[events=="TSTM WIND G"] <- "THUNDERSTORM WIND"
 events[events=="TSTM WIND HAIL"] <- "THUNDERSTORM WIND"
 events[events=="TSTM WINDG"] <- "THUNDERSTORM WIND"
-events[events=="TSUNAMI"] <- "TSUNAMI"
 events[events=="TYPHOON"] <- "HURRICANE/TYPHOON"
 events[events=="VOLCANIC ASH"] <- "VOLCANIC ASH"
-events[events=="WATERSPOUT"] <- "WATERSPOUT"
 events[events=="WILD FOREST FIRE"] <- "WILDFIRE"
-events[events=="WILDFIRE"] <- "WILDFIRE"
-events[events=="WINTER STORM"] <- "WINTER STORM"
 events[events=="WINTER WEATHER MIX"] <- "WINTER WEATHER"
-events[events=="WINTER WEATHER"] <- "WINTER WEATHER"
 events[events=="WINTRY MIX"] <- "WINTER WEATHER"
 events[events=="AGRICULTURAL FREEZE"] <- "FROST/FREEZE"
 events[events=="ASTRONOMICAL HIGH TIDE"] <- "HIGH SURF"
@@ -347,7 +307,6 @@ events[events=="ICE ROADS"] <- "WINTER WEATHER"
 events[events=="ICY ROADS"] <- "WINTER WEATHER"
 events[events=="LAKE EFFECT SNOW"] <- "WINTER WEATHER"
 events[events=="LAKESHORE FLOOD"] <- "LAKESHORE FLOOD"
-events[events=="LANDSLIDE"] <- "LANDSLIDE"
 events[events=="LANDSLIDES"] <- "LANDSLIDE"
 events[events=="LANDSLUMP"] <- "OTHER"
 events[events=="LANDSPOUT"] <- "TORNADO"
@@ -360,11 +319,9 @@ events[events=="MICROBURST"] <- "STRONG WIND"
 events[events=="MIXED PRECIP"] <- "OTHER"
 events[events=="MIXED PRECIPITATION"] <- "OTHER"
 events[events=="MUD SLIDE"] <- "MUDSLIDE"
-events[events=="MUDSLIDE"] <- "MUDSLIDE"
 events[events=="MUDSLIDES"] <- "MUDSLIDE"
 events[events=="NON SEVERE WIND DAMAGE"] <- "HIGH WIND"
 events[events=="NON TSTM WIND"] <- "HIGH WIND"
-events[events=="OTHER"] <- "OTHER"
 events[events=="RAIN"] <- "HEAVY RAIN"
 events[events=="RAIN SNOW"] <- "WINTER WEATHER"
 events[events=="RECORD HEAT"] <- "EXCESSIVE HEAT"
@@ -400,6 +357,7 @@ events[events=="WINDS"] <- "STRONG WIND"
 ```{r}
 unique(events)
 
+# replace messy evtype variable with this new one
 storm$evtype <- events
 ```
 
@@ -423,21 +381,23 @@ ggplot(data = dangerous.events, aes(evtype, fatalities + injuries)) +
   geom_bar(stat = "identity") + coord_flip() + 
   xlab("Event type") + ggtitle("15 events causing most harm to population health") 
 ```
-### Events causing most fatalities:
+
+Events causing most fatalities:
+
 ```{r}
 storm %>% group_by(evtype) %>% 
   summarise(fatalities=sum(fatalities)) %>% 
-  top_n(15, wt = fatalities) %>% 
+  top_n(10, wt = fatalities) %>% 
   arrange(desc(fatalities))
-
 ```
-### Events causing most injuries:
+
+Events causing most injuries:
+
 ```{r}
 storm %>% group_by(evtype) %>% 
   summarise(injuries=sum(injuries)) %>% 
-  top_n(15, wt = injuries) %>% 
+  top_n(10, wt = injuries) %>% 
   arrange(desc(injuries))
-
 ```
 
 ### Events causing most property damage:
@@ -447,10 +407,10 @@ property.damage.events <- storm %>% group_by(evtype) %>%
   top_n(15, wt = property.damage) %>% 
   arrange(desc(property.damage))
 
-property.damage.events
-
-ggplot(aes(evtype, property.damage/10^9, fill=evtype), data=property.damage.events) + geom_bar(stat="identity") + xlab("Event type")+ ylab("Property damage cost ($ billions)") + ggtitle("15 events causing most property damage") + theme(axis.text.x = element_text(angle = 90, hjust = 1), legend.position="none") + coord_flip()
+ggplot(aes(evtype, property.damage/10^9, fill=evtype), data=property.damage.events) + geom_bar(stat="identity") + xlab("Event type")+ ylab("Property damage cost ($ billions)") + ggtitle("15 events causing most property damage") + theme(legend.position="none") + coord_flip()
 ```
+
+Events causing most property damage are: flood/flash flood, hurricane/typhoon, coastal flood, tornado, and hail.
 
 ### Events causing most crop damage:
 ```{r, fig.height=8, fig.width=10}
@@ -459,8 +419,144 @@ crop.damage.events <- storm %>% group_by(evtype) %>%
   top_n(15, wt = crop.damage) %>% 
   arrange(desc(crop.damage))
 
-crop.damage.events
+ggplot(aes(evtype, crop.damage/10^9, fill=evtype), data=crop.damage.events) + geom_bar(stat="identity") + xlab("Event type")+ ylab("Crop damage cost ($ billions)") + ggtitle("15 events causing most crop damage") + theme(legend.position="none") + coord_flip()
 
-ggplot(aes(evtype, crop.damage/10^9, fill=evtype), data=crop.damage.events) + geom_bar(stat="identity") + xlab("Event type")+ ylab("Crop damage cost ($ billions)") + ggtitle("15 events causing most crop damage") + theme(axis.text.x = element_text(angle = 90, hjust = 1), legend.position="none") + coord_flip()
+```
+
+Events causing most crop damage are: drought, flood/flash flood, hurricane/typhoon, hail, and frost/freeze.
+
+## Conclusion
+
+The most harmful for population health events are: tornado, flood/flash flood, excessive heat, thunderstorm wind, and lightning.
+
+The greatest economic consequences have: drought, flood/flash flood, coastal flood hurricane/typhoon, tornado, hail, and frost/freeze. Floods and hurricanes/typhoons are harmful for both property and crops, while drought deals the most damage to crops and much less - to property.
+
+## Appendix
+
+```{r}
+events[events=="TSTM WIND" | events=="THUNDERSTORM" |
+      events=="THUNDERSTORM WINDG" | events=="THUNDERSTORMS"] <- "THUNDERSTORM WIND"
+
+events[events=="MARINE TSTM WIND"] <- "MARINE THUNDERSTORM WIND"
+
+events[events=="COASTAL EROSION" | events=="COASTAL FLOODING EROSION" | events=="COASTAL FLOODING" | events=="COASTAL STORM" | events=="COASTALFLOODING EROSION" | events=="COASTALSTORM"] <- "COASTAL FLOOD"
+events[events=="COLD TEMPERATURE" | events=="COLD WEATHER" | events=="COLD WIND CHILL" | events=="COLD"] <- "COLD/WIND CHILL"
+events[events=="DAMAGING FREEZE"] <- "FROST/FREEZE"
+events[events=="DOWNBURST" | events=="DRY MICROBURST"] <- "STRONG WIND"
+events[events=="EROSION CSTL FLOOD"] <- "COASTAL FLOOD"
+events[events=="EXTREME COLD WIND CHILL" | events=="EXTREME COLD" | events=="EXTREME WINDCHILL"] <- "EXTREME COLD/WIND CHILL"
+events[events=="FLASH FLOOD FLOOD" | events=="FLASH FLOOD" | events=="FLOOD FLASH FLOOD" | events=="FLOOD"] <- "FLOOD/FLASH FLOOD"
+events[events=="FROST FREEZE"] <- "FROST/FREEZE"
+events[events=="FROST"] <- "FROST/FREEZE"
+events[events=="HEAVY RAIN HIGH SURF"] <- "HEAVY RAIN"
+events[events=="HEAVY SNOW SHOWER"] <- "HEAVY SNOW"
+events[events=="HEAVY SURF AND WIND"] <- "HIGH SURF"
+events[events=="HEAVY SURF HIGH SURF"] <- "HIGH SURF"
+events[events=="HEAVY SURF"] <- "HIGH SURF"
+events[events=="HIGH SURF ADVISORY"] <- "HIGH SURF"
+events[events=="HIGH WINDG"] <- "HIGH WIND"
+events[events=="HIGH WINDS"] <- "HIGH WIND"
+events[events=="HURRICANE EDOUARD"] <- "HURRICANE/TYPHOON"
+events[events=="HURRICANE TYPHOON"] <- "HURRICANE/TYPHOON"
+events[events=="HURRICANE"] <- "HURRICANE/TYPHOON"
+events[events=="ICE STORM"] <- "ICE STORM"
+events[events=="RIP CURRENTS"] <- "RIP CURRENT"
+events[events=="SMALL HAIL"] <- "HAIL"
+events[events=="STRONG WINDS"] <- "STRONG WIND"
+events[events=="TSTM WIND AND LIGHTNING"] <- "THUNDERSTORM WIND"
+events[events=="TSTM WIND G"] <- "THUNDERSTORM WIND"
+events[events=="TSTM WIND HAIL"] <- "THUNDERSTORM WIND"
+events[events=="TSTM WINDG"] <- "THUNDERSTORM WIND"
+events[events=="TYPHOON"] <- "HURRICANE/TYPHOON"
+events[events=="VOLCANIC ASH"] <- "VOLCANIC ASH"
+events[events=="WILD FOREST FIRE"] <- "WILDFIRE"
+events[events=="WINTER WEATHER MIX"] <- "WINTER WEATHER"
+events[events=="WINTRY MIX"] <- "WINTER WEATHER"
+events[events=="AGRICULTURAL FREEZE"] <- "FROST/FREEZE"
+events[events=="ASTRONOMICAL HIGH TIDE"] <- "HIGH SURF"
+events[events=="BEACH EROSION"] <- "OTHER"
+events[events=="BLACK ICE"] <- "OTHER"
+events[events=="BLOWING DUST"] <- "DUST STORM"
+events[events=="BLOWING SNOW"] <- "WINTER WEATHER"
+events[events=="BRUSH FIRE"] <- "WILDFIRE"
+events[events=="COLD AND SNOW"] <- "WINTER WEATHER"
+events[events=="DAM BREAK"] <- "FLOOD"
+events[events=="DENSE SMOKE"] <- "WILDFIRE"
+events[events=="DROWNING"] <- "FLOOD"
+events[events=="EARLY FROST"] <- "FROST/FREEZE"
+events[events=="EXCESSIVE SNOW"] <- "HEAVY SNOW"
+events[events=="EXTENDED COLD"] <- "EXTREME COLD/WIND CHILL"
+events[events=="FALLING SNOW ICE"] <- "HAIL"
+events[events=="FOG"] <- "DENSE FOG"
+events[events=="FREEZE"] <- "FROST/FREEZE"
+events[events=="FREEZING DRIZZLE"] <- "FROST/FREEZE"
+events[events=="FREEZING RAIN"] <- "FROST/FREEZE"
+events[events=="FREEZING SPRAY"] <- "FROST/FREEZE"
+events[events=="GLAZE"] <- "FROST/FREEZE"
+events[events=="GRADIENT WIND"] <- "STRONG WIND"
+events[events=="GUSTY WIND"] <- "STRONG WIND"
+events[events=="GUSTY WIND HAIL"] <- "STRONG WIND"
+events[events=="GUSTY WIND HVY RAIN"] <- "STRONG WIND"
+events[events=="GUSTY WIND RAIN"] <- "STRONG WIND"
+events[events=="GUSTY WINDS"] <- "STRONG WIND"
+events[events=="HARD FREEZE"] <- "FROST/FREEZE"
+events[events=="HAZARDOUS SURF"] <- "HIGH SURF"
+events[events=="HEAT WAVE"] <- "HEAT"
+events[events=="HEAVY SEAS"] <- "HIGH SURF"
+events[events=="HIGH SEAS"] <- "FLOOD"
+events[events=="HIGH SWELLS"] <- "FLOOD"
+events[events=="HIGH WATER"] <- "FLOOD"
+events[events=="HYPERTHERMIA EXPOSURE"] <- "HEAT"
+events[events=="HYPOTHERMIA EXPOSURE"] <- "COLD/WIND CHILL"
+events[events=="ICE JAM FLOODMINOR"] <- "WINTER WEATHER"
+events[events=="ICE ON ROAD"] <- "WINTER WEATHER"
+events[events=="ICE ROADS"] <- "WINTER WEATHER"
+events[events=="ICY ROADS"] <- "WINTER WEATHER"
+events[events=="LAKE EFFECT SNOW"] <- "WINTER WEATHER"
+events[events=="LAKESHORE FLOOD"] <- "LAKESHORE FLOOD"
+events[events=="LANDSLIDES"] <- "LANDSLIDE"
+events[events=="LANDSLUMP"] <- "OTHER"
+events[events=="LANDSPOUT"] <- "TORNADO"
+events[events=="LATE SEASON SNOW"] <- "HEAVY SNOW"
+events[events=="LIGHT FREEZING RAIN"] <- "COLD/WIND CHILL"
+events[events=="LIGHT SNOW"] <- "WINTER WEATHER"
+events[events=="LIGHT SNOWFALL"] <- "WINTER WEATHER"
+events[events=="MARINE ACCIDENT"] <- "OTHER"
+events[events=="MICROBURST"] <- "STRONG WIND"
+events[events=="MIXED PRECIP"] <- "OTHER"
+events[events=="MIXED PRECIPITATION"] <- "OTHER"
+events[events=="MUD SLIDE"] <- "MUDSLIDE"
+events[events=="MUDSLIDES"] <- "MUDSLIDE"
+events[events=="NON SEVERE WIND DAMAGE"] <- "HIGH WIND"
+events[events=="NON TSTM WIND"] <- "HIGH WIND"
+events[events=="RAIN"] <- "HEAVY RAIN"
+events[events=="RAIN SNOW"] <- "WINTER WEATHER"
+events[events=="RECORD HEAT"] <- "EXCESSIVE HEAT"
+events[events=="RIVER FLOOD"] <- "FLOOD"
+events[events=="RIVER FLOODING"] <- "FLOOD"
+events[events=="ROCK SLIDE"] <- "LANDSLIDE"
+events[events=="ROGUE WAVE"] <- "HIGH SURF"
+events[events=="ROUGH SEAS"] <- "MARINE HIGH WIND"
+events[events=="ROUGH SURF"] <- "HIGH SURF"
+events[events=="SNOW"] <- "WINTER WEATHER"
+events[events=="SNOW AND ICE"] <- "WINTER WEATHER"
+events[events=="SNOW SQUALL"] <- "HEAVY SNOW"
+events[events=="SNOW SQUALLS"] <- "HEAVY SNOW"
+events[events=="STORM SURGE TIDE"] <- "COASTAL FLOOD"
+events[events=="STORM SURGE"] <- "COASTAL FLOOD"
+events[events=="TIDAL FLOODING"] <- "FLOOD"
+events[events=="TORRENTIAL RAINFALL"] <- "HEAVY RAIN"
+events[events=="UNSEASONABLE COLD"] <- "EXTREME COLD/WIND CHILL"
+events[events=="UNSEASONABLY COLD"] <- "EXTREME COLD/WIND CHILL"
+events[events=="UNSEASONABLY WARM"] <- "HEAT"
+events[events=="UNSEASONAL RAIN"] <- "HEAVY RAIN"
+events[events=="URBAN SML STREAM FLD"] <- "FLOOD"
+events[events=="WARM WEATHER"] <- "HEAT"
+events[events=="WET MICROBURST"] <- "STRONG WIND"
+events[events=="WHIRLWIND"] <- "TORNADO"
+events[events=="WIND"] <- "STRONG WIND"
+events[events=="WIND AND WAVE"] <- "HIGH SURF"
+events[events=="WIND DAMAGE"] <- "STRONG WIND"
+events[events=="WINDS"] <- "STRONG WIND"
 
 ```
